--- a/index.html
+++ b/index.html
@@ -116,12 +116,56 @@
     @media (prefers-reduced-motion: reduce){
       .btn:hover{transform:none}
     }
+      /* Icon heads for service tiles */
+    .head{display:flex;align-items:center;gap:12px;margin:-2px 0 6px}
+    .icon-badge{width:44px;height:44px;border-radius:12px;background:linear-gradient(135deg,var(--orange),var(--green));display:grid;place-items:center;box-shadow:0 6px 14px rgba(17,24,39,.08)}
+    .icon-badge svg{width:22px;height:22px}
+      /* Improved hero artwork */
+    .hero-art{position:relative;min-height:360px;border-radius:22px;border:1px solid var(--border);box-shadow:0 12px 30px rgba(2,6,23,.08);background:#fff;display:grid;place-items:center}
+    .hero-art .art-bg{position:absolute;inset:0;border-radius:22px;background:
+      radial-gradient(420px 220px at 20% 35%, rgba(249,115,22,.18), transparent 60%),
+      radial-gradient(460px 240px at 82% 60%, rgba(34,197,94,.16), transparent 55%)}
+    .mockup{position:relative;width:min(520px,88%);border:1px solid var(--border);border-radius:16px;background:#ffffff;box-shadow:0 8px 24px rgba(2,6,23,.10)}
+    .mockup-header{height:38px;border-bottom:1px solid var(--border);display:flex;align-items:center;gap:6px;padding:0 10px}
+    .mockup-header .dot{width:10px;height:10px;border-radius:50%;background:#e5e7eb;display:inline-block}
+    .mockup-body{padding:16px}
+    .mockup .row{height:12px;border-radius:8px;background:#eef2f7;margin:10px 0}
+    .mockup .row.title{height:16px;width:70%}
+    .mockup .cta{display:flex;gap:10px;margin-top:16px}
+    .pill-gradient{display:inline-block;width:160px;height:34px;border-radius:999px;background:linear-gradient(135deg,var(--orange),var(--green))}
+    .pill{display:inline-block;width:100px;height:34px;border-radius:999px;background:#eef2f7}
+
+    /* Footer tidy layout */
+    footer{padding:40px 0;border-top:1px solid var(--border);background:#ffffff}
+    .footer-grid{display:grid;grid-template-columns:2fr 1fr 1fr;gap:28px;align-items:start}
+    .footer-col h4{margin:0 0 10px;color:#0f172a;font-size:16px}
+    .muted{color:var(--ink-3)}
+    .footer-list{list-style:none;padding:0;margin:8px 0 0}
+    .footer-list li{margin:6px 0}
+    .footer-brand{font-weight:800;font-size:18px;color:#0f172a;margin-bottom:6px}
+    @media(max-width:980px){.footer-grid{grid-template-columns:1fr}}
   </style>
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
   <link rel="manifest" href="site.webmanifest">
   <link rel="icon" href="favicon.ico">
+  <script type="application/ld+json">{
+    "@context":"https://schema.org",
+    "@type":"Organization",
+    "name":"Himu Softech India Pvt. Ltd.",
+    "url":"https://www.himusoftech.com/",
+    "telephone":"+91 99019 88388",
+    "email":"support@himusoftech.com",
+    "address":{
+      "@type":"PostalAddress",
+      "streetAddress":"#12, 5th Main, 2nd Block, 3rd Stage, Basaveshwaranagar",
+      "addressLocality":"Bengaluru",
+      "addressRegion":"KA",
+      "postalCode":"560097",
+      "addressCountry":"IN"
+    }
+  }</script>
 </head>
 <body>
   <header>
@@ -173,28 +217,23 @@
           <p class="lead" style="margin:4px 0 0;color:var(--ink-2)">Google Sheets‑first back‑offices, dashboards, grievance management, and cloud accounting.</p>
         </div>
       </div>
-      <div class="hero-art" aria-label="Abstract illustration">
-        <svg viewBox="0 0 600 450" width="100%" height="100%" preserveAspectRatio="xMidYMid meet" role="img" aria-label="Decorative">
-          <defs>
-            <linearGradient id="grad1" x1="0" x2="1">
-              <stop offset="0" stop-color="#f97316"/>
-              <stop offset="1" stop-color="#22c55e"/>
-            </linearGradient>
-            <filter id="blur" x="-10%" y="-10%" width="120%" height="120%">
-              <feGaussianBlur stdDeviation="30"/>
-            </filter>
-          </defs>
-          <rect width="600" height="450" rx="24" fill="url(#grad1)" opacity="0.08"/>
-          <circle cx="160" cy="140" r="120" fill="#f97316" opacity="0.25" filter="url(#blur)"/>
-          <circle cx="440" cy="260" r="150" fill="#22c55e" opacity="0.25" filter="url(#blur)"/>
-          <rect x="120" y="110" width="360" height="230" rx="18" fill="#ffffff" stroke="#e5e7eb"/>
-          <rect x="150" y="145" width="300" height="20" rx="10" fill="#e5e7eb"/>
-          <rect x="150" y="180" width="260" height="14" rx="7" fill="#f3f4f6"/>
-          <rect x="150" y="205" width="260" height="14" rx="7" fill="#f3f4f6"/>
-          <rect x="150" y="230" width="260" height="14" rx="7" fill="#f3f4f6"/>
-          <rect x="150" y="270" width="180" height="36" rx="18" fill="url(#grad1)" opacity="0.9"/>
-          <rect x="340" y="270" width="110" height="36" rx="18" fill="#f1f5f9"/>
-        </svg>
+      <div class="hero-art" aria-label="Product preview">
+        <div class="art-bg" aria-hidden="true"></div>
+        <div class="mockup" role="img" aria-label="Clean app card preview">
+          <div class="mockup-header">
+            <span class="dot"></span><span class="dot"></span><span class="dot"></span>
+          </div>
+          <div class="mockup-body">
+            <div class="row title"></div>
+            <div class="row"></div>
+            <div class="row"></div>
+            <div class="row"></div>
+            <div class="cta">
+              <span class="pill-gradient"></span>
+              <span class="pill"></span>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -204,12 +243,84 @@
       <h2 class="section-title">Services</h2>
       <p class="section-lead">End‑to‑end product development with rapid iterations and measurable outcomes.</p>
       <div class="grid-3">
-        <article class="card tile"><span class="badge">Popular</span><h3>Web Apps & PWAs</h3><p class="lead">React/Node apps, auth, protected routes, role‑based dashboards, and Firebase/Vercel/Railway deployment.</p></article>
-        <article class="card tile"><h3>Google Sheets Automation</h3><p class="lead">Apps Script workflows, data syncing, email/report automation, and Sheets‑as‑DB patterns done right.</p></article>
-        <article class="card tile"><h3>Data Dashboards</h3><p class="lead">Live KPIs, product‑wise and staff‑wise summaries, exports to Excel/PDF, and drill‑down analytics.</p></article>
-        <article class="card tile"><h3>Cloud & DevOps</h3><p class="lead">CI/CD, environment management, secure secrets, and scalable hosting on Railway, Render, or GCP.</p></article>
-        <article class="card tile"><h3>Mobile‑Friendly UI/UX</h3><p class="lead">Clean, accessible design with multilingual support (English • ಕನ್ನಡ • हिंदी • தமிழ்).</p></article>
-        <article class="card tile"><h3>Integrations</h3><p class="lead">Tally, email/SMS gateways, Google APIs, SDMS/ERP exports, and 3rd‑party services.</p></article>
+        <article class="card tile">
+          <span class="badge">Popular</span>
+          <div class="head">
+            <div class="icon-badge" aria-hidden="true">
+              <svg viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <rect x="3" y="4" width="18" height="14" rx="2"/>
+                <path d="M8 21h8M12 18v3"/>
+              </svg>
+            </div>
+            <h3>Web Apps & PWAs</h3>
+          </div>
+          <p class="lead">React/Node apps, auth, protected routes, role‑based dashboards, and Firebase/Vercel/Railway deployment.</p>
+        </article>
+
+        <article class="card tile">
+          <div class="head">
+            <div class="icon-badge" aria-hidden="true">
+              <svg viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <rect x="3" y="4" width="18" height="16" rx="2"/>
+                <path d="M3 10h18M10 4v16M7 7h2M7 13h2M13 13h4M13 7h4"/>
+              </svg>
+            </div>
+            <h3>Google Sheets Automation</h3>
+          </div>
+          <p class="lead">Apps Script workflows, data syncing, email/report automation, and Sheets‑as‑DB patterns done right.</p>
+        </article>
+
+        <article class="card tile">
+          <div class="head">
+            <div class="icon-badge" aria-hidden="true">
+              <svg viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M4 19V9M10 19V5M16 19v-8M22 19v-4"/>
+              </svg>
+            </div>
+            <h3>Data Dashboards</h3>
+          </div>
+          <p class="lead">Live KPIs, product‑wise and staff‑wise summaries, exports to Excel/PDF, and drill‑down analytics.</p>
+        </article>
+
+        <article class="card tile">
+          <div class="head">
+            <div class="icon-badge" aria-hidden="true">
+              <svg viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M7 16h10a4 4 0 0 0 0-8 5 5 0 0 0-9.7 1.5A3.5 3.5 0 0 0 7 16z"/>
+                <path d="M12 16v5M8 21h8"/>
+              </svg>
+            </div>
+            <h3>Cloud & DevOps</h3>
+          </div>
+          <p class="lead">CI/CD, environment management, secure secrets, and scalable hosting on Railway, Render, or GCP.</p>
+        </article>
+
+        <article class="card tile">
+          <div class="head">
+            <div class="icon-badge" aria-hidden="true">
+              <svg viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <rect x="7" y="2" width="10" height="20" rx="2"/>
+                <path d="M11 19h2"/>
+              </svg>
+            </div>
+            <h3>Mobile‑Friendly UI/UX</h3>
+          </div>
+          <p class="lead">Clean, accessible design with multilingual support (English • ಕನ್ನಡ • हिंदी • தமிழ்).</p>
+        </article>
+
+        <article class="card tile">
+          <div class="head">
+            <div class="icon-badge" aria-hidden="true">
+              <svg viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M8 7l8 10M16 7l-8 10"/>
+                <circle cx="5" cy="7" r="2"/>
+                <circle cx="19" cy="17" r="2"/>
+              </svg>
+            </div>
+            <h3>Integrations</h3>
+          </div>
+          <p class="lead">Tally, email/SMS gateways, Google APIs, SDMS/ERP exports, and 3rd‑party services.</p>
+        </article>
       </div>
     </div>
   </section>
@@ -381,11 +492,13 @@
         </form>
       </div>
       <div class="card tile">
-        <h3>Prefer email or phone?</h3>
-        <p class="lead">Reach out directly and we’ll schedule a quick call.</p>
+        <h3>Talk to us</h3>
+        <p class="lead">Call or email anytime. We’ll schedule a quick call.</p>
+        <p><strong>Phone:</strong> <a href="tel:+919901988388">+91&nbsp;99019&nbsp;88388</a></p>
         <p><strong>Email:</strong> <a href="mailto:support@himusoftech.com">support@himusoftech.com</a></p>
-        <p><strong>Location:</strong> Bengaluru, India</p>
-        <p style="font-size:13px;color:#cbd5e1">Office visits by appointment only.</p>
+        <p><strong>Address:</strong> #12, 5th Main, 2nd Block, 3rd Stage, Basaveshwaranagar, Bengaluru 560097</p>
+        <p><a href="https://www.google.com/maps/search/?api=1&query=%2312%205th%20Main%2C%202nd%20Block%2C%203rd%20Stage%2C%20Basaveshwaranagar%2C%20Bengaluru%20560097" target="_blank" rel="noopener">Open in Google Maps</a></p>
+        <p style="font-size:13px;color:#6b7280">Office visits by appointment only.</p>
       </div>
     </div>
   </section>
@@ -420,27 +533,31 @@
 
   <footer>
     <div class="container footer-grid">
-      <div>
-        <div class="brand" style="margin-bottom:10px">
-          <div class="title">Himu Softech India</div>
-          <div class="tag">Designed and developed by M/s Himu SofTech India Pvt Ltd.</div>Designed and developed by M/s Himu SofTech India Pvt Ltd.</div>
-          </div>
-        </div>
-        <div style="font-size:13px;color:#cbd5e1">For support contact <a href="mailto:support@himusoftech.com">support@himusoftech.com</a></div>
+      <div class="footer-col">
+        <div class="footer-brand">Himu Softech India</div>
+        <div class="muted">Digitize • Automate • Grow</div>
+        <div class="muted" style="margin-top:10px">© <span id="ycopy"></span> Himu SofTech India Pvt Ltd. All rights reserved.</div>
+        <div class="muted" style="margin-top:6px">For support contact <a href="mailto:support@himusoftech.com">support@himusoftech.com</a> | <a href="tel:+919901988388">+91&nbsp;99019&nbsp;88388</a></div>
       </div>
-      <div>
-        <div style="font-weight:700;margin-bottom:8px">Quick links</div>
-        <div><a href="#services">Services</a></div>
-        <div><a href="#work">Work</a></div>
-        <div><a href="#msme">MSME Solutions</a></div>
-        <div><a href="#contact">Contact</a></div>
+      <div class="footer-col">
+        <h4>Quick links</h4>
+        <ul class="footer-list">
+          <li><a href="#services">Services</a></li>
+          <li><a href="#work">Work</a></li>
+          <li><a href="#msme">MSME Solutions</a></li>
+          <li><a href="#quality">Quality</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
       </div>
-      <div>
-        <div style="font-weight:700;margin-bottom:8px">Social</div>
-        <div><a href="#" aria-disabled="true">LinkedIn</a></div>
-        <div><a href="#" aria-disabled="true">GitHub</a></div>
+      <div class="footer-col">
+        <h4>Social</h4>
+        <ul class="footer-list">
+          <li><a href="#" aria-disabled="true">LinkedIn</a></li>
+          <li><a href="#" aria-disabled="true">GitHub</a></li>
+        </ul>
       </div>
     </div>
+    <script>document.getElementById('ycopy').textContent = new Date().getFullYear();</script>
   </footer>
   <script>
     // AJAX submit to Formspree for inline success without leaving the page
