--- a/index.html
+++ b/index.html
@@ -144,6 +144,27 @@
     .footer-list li{margin:6px 0}
     .footer-brand{font-weight:800;font-size:18px;color:#0f172a;margin-bottom:6px}
     @media(max-width:980px){.footer-grid{grid-template-columns:1fr}}
+      /* Icon mosaic hero */
+    .hero-art{position:relative;min-height:360px;border-radius:22px;border:1px solid var(--border);box-shadow:0 12px 30px rgba(2,6,23,.08);background:#fff;display:grid;place-items:center}
+    .hero-art .art-bg{position:absolute;inset:0;border-radius:22px;background:
+      radial-gradient(420px 220px at 20% 35%, rgba(249,115,22,.16), transparent 60%),
+      radial-gradient(460px 240px at 82% 60%, rgba(34,197,94,.14), transparent 55%)}
+    .icon-mosaic{position:relative;z-index:1;display:grid;grid-template-columns:repeat(3,minmax(160px,1fr));gap:14px;padding:22px}
+    @media(min-width:860px){.icon-mosaic{grid-template-columns:repeat(4,minmax(160px,1fr))}}
+    .i-tile{display:flex;align-items:center;gap:10px;border:1px solid var(--border);background:#fff;border-radius:14px;padding:12px 14px;box-shadow:0 6px 16px rgba(2,6,23,.06)}
+    .i-badge{width:40px;height:40px;border-radius:12px;background:linear-gradient(135deg,var(--orange),var(--green));display:grid;place-items:center}
+    .i-badge svg{width:22px;height:22px}
+    .i-label{font-weight:700;color:#0f172a}
+
+    /* Footer tidy layout */
+    footer{padding:40px 0;border-top:1px solid var(--border);background:#ffffff}
+    .footer-grid{display:grid;grid-template-columns:2fr 1fr 1fr;gap:28px;align-items:start}
+    .footer-col h4{margin:0 0 10px;color:#0f172a;font-size:16px}
+    .muted{color:var(--ink-3)}
+    .footer-list{list-style:none;padding:0;margin:8px 0 0}
+    .footer-list li{margin:6px 0}
+    .footer-brand{font-weight:800;font-size:18px;color:#0f172a;margin-bottom:6px}
+    @media(max-width:980px){.footer-grid{grid-template-columns:1fr}}
   </style>
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -217,8 +238,47 @@
           <p class="lead" style="margin:4px 0 0;color:var(--ink-2)">Google Sheets‑first back‑offices, dashboards, grievance management, and cloud accounting.</p>
         </div>
       </div>
-      <div class="hero-art" aria-label="Product preview">
+      <div class="hero-art" aria-label="Icon mosaic of our modules">
         <div class="art-bg" aria-hidden="true"></div>
+        <div class="icon-mosaic" role="list">
+          <div class="i-tile" role="listitem"><span class="i-badge" aria-hidden="true">
+            <svg viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M3 5h18v12H3z"/><path d="M8 21h8M12 17v4"/></svg>
+          </span><span class="i-label">Dashboards</span></div>
+          <div class="i-tile" role="listitem"><span class="i-badge" aria-hidden="true">
+            <svg viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="3" width="18" height="14" rx="2"/><path d="M7 7h4M7 11h10"/></svg>
+          </span><span class="i-label">Delivery</span></div>
+          <div class="i-tile" role="listitem"><span class="i-badge" aria-hidden="true">
+            <svg viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="6" width="18" height="12" rx="2"/><path d="M7 10h10M7 14h6"/></svg>
+          </span><span class="i-label">Billing</span></div>
+          <div class="i-tile" role="listitem"><span class="i-badge" aria-hidden="true">
+            <svg viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="9"/><path d="M8 12h5a3 3 0 1 0-3-3"/></svg>
+          </span><span class="i-label">GST</span></div>
+          <div class="i-tile" role="listitem"><span class="i-badge" aria-hidden="true">
+            <svg viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M10 13l-3 3 3 3"/><path d="M14 11l3-3-3-3"/><path d="M8 16h8M8 8h8"/></svg>
+          </span><span class="i-label">SDMS↔Tally</span></div>
+          <div class="i-tile" role="listitem"><span class="i-badge" aria-hidden="true">
+            <svg viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="4" y="4" width="16" height="16" rx="2"/><path d="M9 9h6v6H9z"/></svg>
+          </span><span class="i-label">GMS</span></div>
+          <div class="i-tile" role="listitem"><span class="i-badge" aria-hidden="true">
+            <svg viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 7h16M4 12h16M4 17h16"/></svg>
+          </span><span class="i-label">Inventory</span></div>
+          <div class="i-tile" role="listitem"><span class="i-badge" aria-hidden="true">
+            <svg viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 21v-2a4 4 0 0 0-8 0v2"/><circle cx="12" cy="7" r="4"/></svg>
+          </span><span class="i-label">Payroll</span></div>
+          <div class="i-tile" role="listitem"><span class="i-badge" aria-hidden="true">
+            <svg viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M3 15l4-4 4 4 4-4 4 4"/></svg>
+          </span><span class="i-label">Cloud</span></div>
+          <div class="i-tile" role="listitem"><span class="i-badge" aria-hidden="true">
+            <svg viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 1v22"/><path d="M5 8h14M5 16h14"/></svg>
+          </span><span class="i-label">Security</span></div>
+          <div class="i-tile" role="listitem"><span class="i-badge" aria-hidden="true">
+            <svg viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M3 12a9 9 0 1 0 18 0A9 9 0 0 0 3 12z"/><path d="M12 3v18M3 12h18"/></svg>
+          </span><span class="i-label">Multilingual</span></div>
+          <div class="i-tile" role="listitem"><span class="i-badge" aria-hidden="true">
+            <svg viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M10 13l-3 3 3 3"/><path d="M14 11l3-3-3-3"/></svg>
+          </span><span class="i-label">Integrations</span></div>
+        </div>
+      </div>
         <div class="mockup" role="img" aria-label="Clean app card preview">
           <div class="mockup-header">
             <span class="dot"></span><span class="dot"></span><span class="dot"></span>
